<resources>
    <string name="app_name">Flixster Pro</string>

    <string name="release_date_2022_01_01">Release Date: 2022–01–01</string>
    <string name="rating_10_10">Rating: 10/10</string>
    <string name="movie_title">Movie Title</string>
    <string name="movie_overview">Very Long Movie Overview. The movie overview is very long. Yes, extremely Long!</string>
    <string name="movieimg">MovieImg</string>
</resources>
